添加用户 API Key 管理功能，包括创建、查询和撤销 API Key 的接口实现