@@ -10,7 +10,6 @@ import org.springframework.security.authentication.UsernamePasswordAuthenticatio
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.ReactiveSecurityContextHolder;
-import org.springframework.stereotype.Component;
 import org.springframework.web.server.ServerWebExchange;
 import org.springframework.web.server.WebFilter;
 import org.springframework.web.server.WebFilterChain;
@@ -18,9 +17,9 @@ import reactor.core.publisher.Mono;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
-@Component
 @RequiredArgsConstructor
 public class JwtAuthenticationFilter implements WebFilter {
 
@@ -30,43 +29,70 @@ public class JwtAuthenticationFilter implements WebFilter {
     @Override
     public Mono<Void> filter(ServerWebExchange exchange, WebFilterChain chain) {
         String token = exchange.getRequest().getHeaders().getFirst(HttpHeaders.AUTHORIZATION);
-
         if (token == null || !token.startsWith("Bearer ")) {
             return chain.filter(exchange);
         }
 
-        token = token.substring(7);
-        if (!jwtUtil.validateToken(token)) {
+        String bearerToken = token.substring(7);
+        if (!jwtUtil.validateToken(bearerToken)) {
             return chain.filter(exchange);
         }
 
-        Long userId = jwtUtil.getUserIdFromToken(token);
-        String authoritiesKey = RedisKeys.userPermsKey(userId);
+        return ReactiveSecurityContextHolder.getContext()
+                .map(ctx -> ctx.getAuthentication())
+                .flatMap(existingAuth -> {
+                    if (existingAuth != null && existingAuth.isAuthenticated()) {
+                        return chain.filter(exchange);
+                    }
 
+                    Long userId = jwtUtil.getUserIdFromToken(bearerToken);
+                    return loadAuthorities(userId)
+                            .flatMap(authorities -> {
+                                UsernamePasswordAuthenticationToken authentication =
+                                        new UsernamePasswordAuthenticationToken(userId, null, authorities);
+                                authentication.setDetails(Map.of("authType", "JWT"));
+
+                                return chain.filter(exchange)
+                                        .contextWrite(ReactiveSecurityContextHolder.withAuthentication(authentication));
+                            });
+                })
+                .switchIfEmpty(Mono.defer(() -> {
+                    Long userId = jwtUtil.getUserIdFromToken(bearerToken);
+                    return loadAuthorities(userId)
+                            .flatMap(authorities -> {
+                                UsernamePasswordAuthenticationToken authentication =
+                                        new UsernamePasswordAuthenticationToken(userId, null, authorities);
+                                authentication.setDetails(Map.of("authType", "JWT"));
+
+                                return chain.filter(exchange)
+                                        .contextWrite(ReactiveSecurityContextHolder.withAuthentication(authentication));
+                            });
+                }))
+                .onErrorResume(e -> chain.filter(exchange));
+    }
+
+    private Mono<List<GrantedAuthority>> loadAuthorities(Long userId) {
+        String authoritiesKey = RedisKeys.userPermsKey(userId);
         return reactiveRedisTemplate.opsForValue()
                 .get(authoritiesKey)
                 .defaultIfEmpty(Collections.emptyList())
-                .flatMap(val -> {
-                    @SuppressWarnings("unchecked")
-                    List<String> authoritiesStr = (val instanceof List) ? (List<String>) val : Collections.emptyList();
+                .map(this::convertAuthorities);
+    }
 
-                    // 如果是超级管理员，全权限占位符让后续鉴权统一放行
-                    if (authoritiesStr.contains(SecurityConstants.ALL_PERMISSIONS_AUTHORITY)) {
-                        authoritiesStr = List.of(SecurityConstants.ALL_PERMISSIONS_AUTHORITY, SecurityConstants.SUPER_ADMIN_AUTHORITY);
-                    }
+    private List<GrantedAuthority> convertAuthorities(Object value) {
+        @SuppressWarnings("unchecked")
+        List<String> authoritiesStr = value instanceof List ? (List<String>) value : Collections.emptyList();
 
-                    List<GrantedAuthority> authorities = authoritiesStr.stream()
-                            .filter(a -> a != null && !a.isBlank())
-                            .map(SimpleGrantedAuthority::new)
-                            .collect(Collectors.toList());
+        if (authoritiesStr.contains(SecurityConstants.ALL_PERMISSIONS_AUTHORITY)) {
+            authoritiesStr = List.of(
+                    SecurityConstants.ALL_PERMISSIONS_AUTHORITY,
+                    SecurityConstants.SUPER_ADMIN_AUTHORITY
+            );
+        }
 
-                    UsernamePasswordAuthenticationToken authentication =
-                            new UsernamePasswordAuthenticationToken(userId, null, authorities);
-
-                    return chain.filter(exchange)
-                            .contextWrite(ReactiveSecurityContextHolder.withAuthentication(authentication));
-                })
-                // Redis 取不到/反序列化失败时，也不要把请求直接打挂
-                .onErrorResume(e -> chain.filter(exchange));
+        return authoritiesStr.stream()
+                .filter(a -> a != null && !a.isBlank())
+                .map(SimpleGrantedAuthority::new)
+                .collect(Collectors.toList());
     }
 }
